--- a/README.org
+++ b/README.org
@@ -31,20 +31,20 @@
    the joy of playing with the HP Scientific Calculators many year ago.
 
    For a long time I entertained the hope of passing on the
-   knowhow. But it's not so easy, since the thing which makes Emacs so
+   know-how. But it's not so easy, since the thing which makes Emacs so
    great and efficient - its staggering flexibility - also makes it
    tough to teach. Most long time users end up with configurations that
    fit them like a glove. But other users will be very opinionated in regards
    to the packages and optimizations that are used. There's a good number
-   of excellent meta-distributions around, like SpaceMacs or Doom. They
-   may be great for many users. I myself always stayed with my hand-written
+   of excellent meta-distributions around, like [[https://www.spacemacs.org/][Spacemacs]] or [[https://github.com/hlissner/doom-emacs][Doom]]. They
+   are great and will fit many users. I myself always stayed with my hand-written
    config that I constantly adapted to more modern styles (which prevented
-   me from ever declaring the dreaded /Dot Emacs Bankruptcy/)
+   me from ever declaring the dreaded [[https://www.emacswiki.org/emacs/DotEmacsBankruptcy][Dot Emacs Bankruptcy]]).
 
    I now decided to make a first test run with a course that is based on
    basic configuration of Emacs. I will start with an initial configuration
    that already has a number of nice packages that will wet the appetite.
-   But the idea is not that learners shall adpot these exact configurations.
+   But the idea is not that learners shall adopt these exact configurations.
    They should learn how the configuration works and how they can adapt
    it. So, they by themselves will be able to make an informed decision about
    whether they want to adopt one of the meta distributions, change the
@@ -73,7 +73,7 @@
 
     This repository contains the course in the form of Org mode task files.
     It should be checked out into the =~/Documents/orgcourse= folder of your account.
-    The emacs configuration for the course contains settings that expect to
+    The Emacs configuration for the course contains settings that expect to
     find the files under that location.
 
     #+begin_src bash
@@ -95,7 +95,7 @@
     compile some extensions and pull in some OS packages (e.g. for the
     PDF integration).
 
-    Packages ar pulled down from the [[https://elpa.gnu.org/][GNU ELPA]], [[https://melpa.org/#/][MELPA]], and [[https://orgmode.org/][Org]]
+    Packages are pulled down from the [[https://elpa.gnu.org/][GNU ELPA]], [[https://melpa.org/#/][MELPA]], and [[https://orgmode.org/][Org]]
     repositories. GNU ELPA has recently changed its gpg keys, so you
     may need to run the following command in order to update your
     gpg security configuration (q.v. [[https://metaredux.com/posts/2019/12/09/dealing-with-expired-elpa-gpg-keys.html][this nice article]])
@@ -139,7 +139,7 @@
     - "M-f" :: M refers to the =META= key, which on Linux/MS-Windows is
       the =ALT= key (On Macs this can be the =Option= or =Command=
       key). So, =M-f= means press the =ALT= key together with the =f= key
-    - "S-g" :: =S= is short for the =SHIFT= key, so this meand press =SHIFT= and =g=
+    - "S-g" :: =S= is short for the =SHIFT= key, so this means press =SHIFT= and =g=
       together
     - "M-S-;" :: this means press the =META=, =SHIFT=, and =;= keys together.
 
@@ -196,53 +196,62 @@
    having to use an unconfigured Emacs. But the real convenience and power
    is attained through the add-ons that the community has created over
    the years.
+
+   This is a *work in progress.* The parts which I have already covered, I mark
+   by filled checkboxes.
    
    1. Basic Emacs and Org mode
       - this is a big first stage, but I think that Org mode must be introduced
 	early, because it is one of the principal features that immediately
 	offers big benefits to new users
-      - basic editing
-      - file management (dired)
-      - org mode as a basic task manager (org agenda, basic org file features)
-      - easier user interface with helm, smex, ido
-      - emacs package management
-      - how to use the info and help systems
-      - minimal emacs lisp knowledge, just enough to understand the config
+      - basic editor features
+	- [X] file loading, saving, save as
+	- [X] searching for strings and regexps
+      - file management
+	- [X] efficient file navigation with helm and ido
+	- [ ] dired file manager - basic commands
+      - [X] org mode as a basic task manager (org agenda, basic org file features)
+      - [X] executing Emacs commands
+	- [X] using smex or helm to more easily execute commands
+      - [ ] Emacs package management
+      - [X] how to use the info and help systems
+      - [ ] minimal Emacs lisp knowledge, just enough to understand the config
 	in a rudimentary way and lose the fear of parentheses
    2. Emacs for higher productivity, programming and system management
-      - emacs daemon
-      - Magit - is there a better Git interface then this?
-      - Tramp (a killer feaure for users working on remote hosts. Loved by
+      - [ ] Emacs daemon
+      - [ ] Magit - is there a better Git interface than this project from Jonas Bernoulli?
+      - [ ] Tramp (a killer feature for users working on remote hosts. Loved by
 	system administrators and developers)
-      - Org capture - create tasks and back-links from everywhere
-      - gpg for encrypting files
-      - dired revisited
-      - command execution from Emacs
-      - a look at some of the programming modes
-      - lsp-mode (a modern IDE interface in Emacs)
-      - linting (Syntax checking with flycheck)
-   3. Authoring LaTeX, HTML, and other documents with Org mode
-      - write scientific documents containing math, preview the math
-      - do inline calculations with Calc
-      - include graphics and screenshots
-      - simple first steps with Org Babel to execute code and
+      - [ ] Org capture - create tasks and back-links from everywhere
+      - [ ] Emacs Macros	
+      - [ ] do inline calculations with Calc
+      - [ ] dired revisited
+      - [ ] shell command execution from Emacs
+      - [ ] a look at some of the programming modes
+      - [ ] lsp-mode (a modern IDE interface in Emacs)
+      - [ ] linting (Syntax checking with flycheck)
+      - [ ] gpg for encrypting files
+   3. Authoring Latex, HTML, and other documents with Org mode
+      - [ ] write scientific documents containing math, preview the math
+      - [ ] include graphics and screenshots
+      - [ ] simple first steps with Org Babel to execute code and
 	create graphics
    4. Org Babel for real
-   5. Fast Presentations with LaTeX beamer through Org
+   5. Fast Presentations with Latex beamer through Org
    6. Integrating with your browser
-      - Use emacs to edit forms in browsers like Firefox or Chrome
+      - [ ] Use Emacs to edit forms in browsers like Firefox or Chrome
         (through the daemon)
-      - org-protocol: transfer information from the browser to Emacs,
-	e.g. mark some text in the browser and get it into emacs, or
+      - [ ] org-protocol: transfer information from the browser to Emacs,
+	e.g. mark some text in the browser and get it into Emacs, or
 	convert a web page to org mode and find it ready in your buffer!
    7. Emacs and email
-      - mu4e and mbsync to manage email
-      - integrate email with org mode task management, making
+      - [ ] mu4e and mbsync to manage email
+      - [ ] integrate email with org mode task management, making
         efficient use of org capture and email links in workflows.
    8. Emacs for science
-      - helm-bitex
-      - org-ref
-      - org-babel
-      - org-noter and PDF management
-      - jupyter (maybe)
+      - [ ] helm-bibtex
+      - [ ] org-ref
+      - [ ] org-babel
+      - [ ] org-noter and PDF management
+      - [ ] jupyter (maybe)
       
