--- a/agenda/course01-basics.org
+++ b/agenda/course01-basics.org
@@ -23,7 +23,7 @@
   states.
 
   The sections below each headline contain subsections (lines starting
-  with two stars - you can unfold them as well). The subjections
+  with two stars - you can unfold them as well). The subsections
   contain lists with exercises and often feature checkboxes. Go
   through the exercises, and each time you finished an item, you can
   position your cursor on the respective checkbox and type "C-c C-c"
@@ -35,30 +35,30 @@
    - [ ] I learned this
    - [ ] I learned that
 
- Ok, now proceed to the first section below, and hack away...
+ OK, now proceed to the first section below, and hack away...
   
 * Basic Emacs usage
   Emacs contains an excellent tutorial. You can reach it by using
-  the keycombo "C-h t". The following exercises only contain a subset
+  the key-combo "C-h t". The following exercises only contain a subset
   of commands.
 ** TODO Loading and saving files [0/4]
    :LOGBOOK:
    - State "TODO"       from              [2020-06-11 Thu 23:07]
    :END:
-   - [ ] the standard way of loading a file uses the keycombo "C-x
+   - [ ] the standard way of loading a file uses the key-combo "C-x
      C-f" (find-file). You will then be prompted for the file.
-     - In this emacs configuration I have configured
+     - In this Emacs configuration I have configured
        the *ido* system. This offers you a nice way of selecting the file
        from candidates based on what you type. It supports some
-       some fuzzy matching logic (e.g. when you enter "cb" it will show you
+       fuzzy matching logic (e.g. when you enter "cb" it will show you
        "course-basics" among the hits, since "cb" matches the initials)
      - when you enter "//" it will jump to the root file system.
      - when you enter "~/" it will jump to your home directory
-     - if you enter the name of a nonexistent file "[nomatch]" will be displayes,
+     - if you enter the name of a nonexistent file "[nomatch]" will be displayed,
        if you hit <RETURN> it will offer to create this file as a new file. Confirm
        with a second <RETURN>.
    - [ ] a very powerful file navigation tool is available via the
-     helm package in this Emacs configuration. Use the keycombo "<f5> f"
+     helm package in this Emacs configuration. Use the key-combo "<f5> f"
      (helm-find-files).
      - you can use the arrow keys to move up, down, into and out of directories
      - typing will narrow the candidates down according to your search expression
@@ -67,7 +67,7 @@
      - typing the name of a nonexistent file will offer to create it. If you type
        a nonexistent filename and terminate it by a "/", you will be asked whether
        you want to create that directory.
-   - [ ] Save a file buffer after changing it by using the keycombo
+   - [ ] Save a file buffer after changing it by using the key-combo
      "C-x C-s" (save-buffer)
    - [ ] Save a buffer under another name by using "C-x C-w" (ido-write-file).
 
@@ -86,19 +86,19 @@
    sharing the frame.
 
    - [ ] split the current window horizontally in 2 windows. Use
-     the keycombo "C-x 2" (split-window-below)
+     the key-combo "C-x 2" (split-window-below)
    - [ ] split the window in which you currently are in two vertical
-     windows by using the keycombo "C-x 3" (split-window-right)
-   - [ ] you can switch to another window by using the keycombo
+     windows by using the key-combo "C-x 3" (split-window-right)
+   - [ ] you can switch to another window by using the key-combo
      "C-x o" (other-window)
    - [ ] you can scroll the "other" window by using "<M-PageUp>" and
      "<M-PageDown>", or alternatively "<C-M-v>" and "<C-M-S-v>"
      (scroll-other-window). This is very practical for scrolling the
      documentation without leaving the current window.
    - [ ] two make the current window the only window of the frame,
-     you can use the keycombo "C-x 1" (delete-other-windows)
+     you can use the key-combo "C-x 1" (delete-other-windows)
    - [ ] split the window again using the commands above. You can
-     close the window in which the cursor is, by using the keycombo
+     close the window in which the cursor is, by using the key-combo
      "C-x 0" (delete-window)
 
    You can read more about the windows management in [[info:emacs#Windows][info:emacs#Windows]]
@@ -107,22 +107,22 @@
    Emacs predates the time where the /Cut, Copy & Paste/ expressions
    were coined, and the old command names still are used.
    - [ ] You can select text by placing the cursor on the starting
-     position and then use the keycombo "C-SPC" (set-mark-command). The
+     position and then use the key-combo "C-SPC" (set-mark-command). The
      position where you do this is called /the mark/. When you now move
      the cursor you will see that the region between the mark and your current
      position will be highlighted. This selected text is called /the region/.
    - [ ] Cutting text is called /killing text/. You can kill the text
-     by using the keycombo "c-k" (kill-line, or similar commands depending
+     by using the key-combo "c-k" (kill-line, or similar commands depending
      on the current mode). Kill this sentence.
    - [ ] You can insert/paste the killed text somewhere else by moving
-     your cursor to the new position and using the keycombo "C-y" (org-yank).
+     your cursor to the new position and using the key-combo "C-y" (org-yank).
      This action is called /yanking/. Insert your killed text here:
    - [ ] If you do not want to cut the text, but you just want to copy is,
-     you invoke the keycombo "M-w" (kill-ring-save). This leaves the region
+     you invoke the key-combo "M-w" (kill-ring-save). This leaves the region
      as it is, but you can insert it somewhere else with "C-y" as above.
    - [ ] When you invoke "C-y" multiple times in a row, the inserted
      text will be exchanged against an earlier killed text. This way
-     you can go throught the history of copied text pieces. The memory
+     you can go through the history of copied text pieces. The memory
      where the copied texts are stored is called the "kill-ring"
    - [ ] an even simpler way to work with the "kill-ring" is to
      use the respective helm command which in this Emacs config is
@@ -132,14 +132,14 @@
    :LOGBOOK:
    - State "TODO"       from              [2020-06-11 Thu 23:07]
    :END:
-   - [ ] Use the keycombo "C-s" (isearch-forward) to do an incremental
+   - [ ] Use the key-combo "C-s" (isearch-forward) to do an incremental
      string search forward. Hitting "C-s" again jumps to the next match.
      <RETURN> exits the search, placing the cursor after the current hit.
      - You can get extensive help on isearch by looking up its help page
        by "C-h k C-s" (q.v. [[*What does this key or combo do?][What does this key or combo do?]])
-   - [ ] Use the keycombo "C-u C-s" (isearch-forward) to do an incremental
+   - [ ] Use the key-combo "C-u C-s" (isearch-forward) to do an incremental
      regexp search forward.
-   - [ ] The keycombos "C-r" and "C-u C-r" do the same in backwards direction
+   - [ ] The key-combos "C-r" and "C-u C-r" do the same in backwards direction
    - [ ] One of the best search tools uses the helm framework and is included
      in this configuration: [[https://github.com/emacsorphanage/helm-swoop][helm-swoop]]. Use "<f5> s" (helm-swoop) to enter a
      search mode where you see all the hits that match your current search expression
@@ -156,22 +156,22 @@
    key combo "M-x". In this configuration we have configured the
    package "smex" which makes the selection of commands much easier.
 
-   - [ ] run the command "emacs-version" by using the keycombo "M-x".
+   - [ ] run the command "emacs-version" by using the key-combo "M-x".
      The fuzzy matching of smex will allow you to enter e.g. the initials
      "ev", or you can type "emav", or "emacs-ver". <RETURN> selects the
      current command.
    - [ ] if you want to get information about a command in smex, you can
-     invoke the help system by using the keycombo "C-h f" (describe-function)
+     invoke the help system by using the key-combo "C-h f" (describe-function)
      while being in the smex selection dialog.
    - [ ] If you want to get information about a function written in the text,
-     you can use the keycombo "C-h f" while the cursor is on the name of a
+     you can use the key-combo "C-h f" while the cursor is on the name of a
      function. Try it with the one on the next line
      :                emacs-version
      Emacs will offer you the word under the cursor as the default for looking
      up the respective help page.
    - [ ] One of the most powerful ways to get information is by using the
      helm package that is configured in this Emacs configuration. You
-     can invoke the keycombo "<f5> a" (helm-apropos). You can then search
+     can invoke the key-combo "<f5> a" (helm-apropos). You can then search
      for Emacs commands, functions, and variables.
      - if your cursor is on a name that matches an Emacs function or variable,
        it will be already used as the default in the narrowing framework
@@ -181,13 +181,13 @@
 
 * Emacs help and info systems
   Emacs is very consistent in its basic key mappings. All basic help
-  functionalities start with the keycombo "C-h"
+  functionalities start with the key-combo "C-h"
 
 ** TODO Using the GNU Info system [0/1]
    Emacs Documentation is in Info format. Though this is an old
    format, it still is extremely useful and lightweight.
 
-   - [ ] Enter the info system by using the keycombo "C-h i" (info).
+   - [ ] Enter the info system by using the key-combo "C-h i" (info).
      Exit it again by using "q". Maybe it is best, if you open a
      second window (e.g. by doing "C-x 3" to split the current one),
      so that you still can see the instructions below
@@ -211,16 +211,16 @@
 ** TODO What does this key or combo do?
 
    - [ ] To find out what a certain key can do in the current
-     context, use the keycombo "<C-h> k". You are then asked
+     context, use the key-combo "<C-h> k". You are then asked
      to enter the combo. Try to find out what is mapped to
      the "C-c C-t" combination.
 
 ** TODO Get help on the current mode [0/2]
    - [ ] Invoke the help for the current buffer's major mode by
-     using the keycombo "C-h m"
+     using the key-combo "C-h m"
    - [ ] In the course's configuration I included a helm mode
      for fast finding keys of the current mode.
-     Try the keycombo "<f5> d" (helm-descbinds). You now can narrow
+     Try the key-combo "<f5> d" (helm-descbinds). You now can narrow
      down to commands
 * Basic Org mode
 ** TODO Basic folding [0/3]
@@ -236,7 +236,7 @@
 
    Try it out
    - [ ] Go to some headlines and fold/unfold them just using <TAB>
-   - [ ] fold and unfold the whole document by using the keycombo "S-<TAB>"
+   - [ ] fold and unfold the whole document by using the key-combo "S-<TAB>"
      anywhere in the document (except if you are on a special element, e.g. in
      a list)
    - [ ] go to some items in this list and experiment with the folding
@@ -258,15 +258,15 @@
    hierarchy is one example of this. But there also basic lists, and Org
    provides powerful commands to compose and manipulate them
 
-   - [ ] use keycombo "<M-up>" (org-metaup) and keycombo "<M-down>" (org-metadown) 
+   - [ ] use key-combo "<M-up>" (org-metaup) and key-combo "<M-down>" (org-metadown) 
      to move list up and down
-   - [ ] use keycombo "<M-left>" and "<M-right>" to change the
+   - [ ] use key-combo "<M-left>" and "<M-right>" to change the
      hierarchy level of items. If you want to move a whole tree
-     including its sub-items, you need to use keycombo "<M-S-right>"
-     (org-shiftmetaright) or keycombo "<M-S-left>" (org-shiftmetaleft)
-   - [ ] add list items by using the keycombo "<M-Return>" (org-meta-return) at the end
+     including its sub-items, you need to use key-combo "<M-S-right>"
+     (org-shiftmetaright) or key-combo "<M-S-left>" (org-shiftmetaleft)
+   - [ ] add list items by using the key-combo "<M-Return>" (org-meta-return) at the end
      of a list line
-   - [ ] change the list type and list-marker by using the keycombo "<S-left>" (org-shiftleft)
+   - [ ] change the list type and list-marker by using the key-combo "<S-left>" (org-shiftleft)
      and "<S-right>" (org-shiftright) on different lines of the following list, and watch how
      this cycles the symbols.
    - [ ] you can mark several lines using the usual "<C-SPACE>" and then move
@@ -289,7 +289,7 @@
    - State "TODO"       from              [2020-06-11 Thu 10:29]
    :END:
 
-   - [ ] You can jump to a link's target using the keycombo "C-c C-o"
+   - [ ] You can jump to a link's target using the key-combo "C-c C-o"
      (org-open-at-point). Try it out with some of the following links.
    - Org recognizes simple links in a text just based on a number
      of string patterns
@@ -312,7 +312,7 @@
        - [[file:~/.emacs.d/init.el][init.el]]
        - [[info:org#Link Format][the info page for the org link format]]  - a link to org's info pages
        - [[* Basic folding]] a link of this structure points to a heading in the present document
-   - [ ] The keycombo "C-c C-l" (org-insert-link) can be used to insert and edit links.
+   - [ ] The key-combo "C-c C-l" (org-insert-link) can be used to insert and edit links.
      When the cursor is on a link, you will edit the link. Try it with the
      previous links
 
@@ -358,7 +358,7 @@
      adapted in sophisticated ways, as in this file. At the top of the
      file I defined a line defining different states
      : #+TODO: TODO(t!) WAIT(W@/!) | DONE(d!) CANCELED(c@) DELEGATED-AWAY(G@/!)
-   - [ ] change the state of a task by using the keycombo "C-c C-t" (org-todo).
+   - [ ] change the state of a task by using the key-combo "C-c C-t" (org-todo).
      If there are multiple possibilities to which a state can evolve, you will
      be offered a menu.
    - you can fine-tune the states changes (details are found
@@ -387,7 +387,7 @@
      This is the *scheduled* time, and this may be changed quite a lot during
      a tasks lifetime. If I do not finish the task on Wednesday, I may reschedule
      it for finishing it on Friday. But this will not affect the deadline!
-   - [ ] Schedule a task. This you can do by using the keycombo "C-c C-s" while
+   - [ ] Schedule a task. This you can do by using the key-combo "C-c C-s" while
      you are in a task. A calendar will be displayed. Within this calendar you
      move by
      - <S-right>, <S-left>, <S-up>, <S-down> :: moves by days
@@ -397,18 +397,18 @@
      - C-g :: cancels
    - [ ] take note that now there is a "SCHEDULED" line added to the task, just
      below the task's headline
-   - [ ] add a deadline to the same task by using the keycombo "C-c
+   - [ ] add a deadline to the same task by using the key-combo "C-c
      C-d" (org-deadline). Take note that as with the scheduling, now
      there is a "DEADLINE" keyword with timestamp below the task's headline.
-   - [ ] you can create repeating taks by adding a modifier to a time stamp like
-     in these exapmples
+   - [ ] you can create repeating tasks by adding a modifier to a time stamp like
+     in these examples
      - [2020-07-10 Fri +7d]
      - [2020-07-10 Fri +2w]
      Go to one of the tasks in this file and schedule it or give it a
      deadline ("C-c C-s" or "C-c C-d").  Then add a repeater modifier
      like in the examples above.
      When you now resolve the task ("C-c C-t" and then chose an end-state like DONE),
-     you will see that the taks is launched again and the timestamp is shifted
+     you will see that the task is launched again and the timestamp is shifted
      by the repeater interval.
 
      You can read more about timestamps in [[info:org#Timestamps][info:org#Timestamps]]
@@ -417,7 +417,7 @@
    Org uses time stamps in many locations. You saw
    them when scheduling tasks and also when changing
    the state of a task. Org offers a number of nice
-   keymappings to change timestamps fast.
+   key-mappings to change timestamps fast.
 
    Active timestamps will show up in the agenda, inactive ones
    will not. For normal texts, it is best to always use the inactive
@@ -436,24 +436,24 @@
      the cursor on a timestamp and use
      - C-c . :: use calendar (leaves an active timestamp)
      - C-c ! :: use calendar (leaves an inactive timestamp)
-   - [ ] the above keycombos can also be used to enter a new timestamp
+   - [ ] the above key-combos can also be used to enter a new timestamp
      anywhere in an org file. Try it.
    - [ ] If you add the prefix argument "C-u" before one of the above
      insertion commands, it will not only create a date timestamp, but
-     also add the current time. Try it with the keycombo "C-u C-c !",
+     also add the current time. Try it with the key-combo "C-u C-c !",
      select a date from the offered calendar
      
 ** TODO Jump to tasks with helm-org
    [[https://emacs-helm.github.io/helm/][Helm]] is a great system for selections. We will meet it later.
    It is included and configured in my course's configuration.
 
-   - [ ] Use the keycombo "<f5> <f5>" (helm-org-agenda-files-headings).
+   - [ ] Use the key-combo "<f5> <f5>" (helm-org-agenda-files-headings).
      When you now type characters, the selection options for matching
      tasks will be narrowed down. Use the cursor to go up and down,
      press <RETURN> to select the task to which you want to jump
      
 ** TODO Display the agenda and navigate within it [0/3]
-   - [ ] Use the keycombo "C-c a" to get the agenda menu. In the menu
+   - [ ] Use the key-combo "C-c a" to get the agenda menu. In the menu
      choose "a" for "agenda". You will get the default view of the agenda,
      which is the present week.
    - [ ] try navigating in the agenda using these keys
